fixed line spacing for description

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -66,7 +66,7 @@
 .container{
   
   display: inline-block;
-  background-color: brown;
+  background-color: white;
   box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
   border: 3px solid white;
   margin-top: 10%;
@@ -75,15 +75,17 @@
 
 
 .container img{
+  position: relative;
   display: block;
   height: 500px;
-    width: auto;
+  width: auto;
 }
 
 .container .about{
   width: 0;
+  margin-top: 10px;
   min-width: 100%;
-  background-color: green;
+  background-color: white;
   white-space: pre-line;
   word-wrap: break-word;
   font-size: 18px;
@@ -92,9 +94,9 @@
 .container .time {
   width: 0;
   min-width: 100%;
-  background-color: aqua;
+  background-color: white;
+  margin-top: 10px;
   color: black;
   text-align: right;
   font-size: 14px;
-  white-space: pre-line;
 }
